--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/papaparse": "^5.5.2",
     "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +54,7 @@
     "lucide-react": "^0.462.0",
     "marked": "^12.0.1",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
